--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
         "@account-kit/wallet-client": "^0.1.0-alpha.10",
         "@alchemy/aa-alchemy": "^3.0.0",
         "@alchemy/aa-core": "^3.0.0",
-        "ethers": "^6.16.0",
-        "ipfs-http-client": "^60.0.1"
+        "ethers": "^6.16.0"
     },
     "devDependencies": {
         "typescript": "^5.9.3"
