Add vitest test infrastructure with 137 unit tests
Set up vitest for the SDK and wrote comprehensive unit tests covering:
- Environment config (ALLOWED_ENVIRONMENTS, ENV_CONFIG, getRandomRpc)
- Transaction builders (buildEnterOptionRawTx, buildLimitBuyOrderRawTx, buildApproveRawTx)
- CreateMarket validation (~28 cases), helpers (normalizeBarValues, uploadMetaData)
- ClaimFunds helpers (getMarket, isRpcValid, getUserOptionShares)
- Combined async flows (buildCreateMarketRawTx, buildClaimRawTx)
- Market queries (getMarkets with fetch mocks)
- Utility functions (convertToWeiEthers, getUserAllownace)
- Rain class (constructor, method delegation)
- RainAA class (constructor validation, getter guards, disconnect)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "scripts": {
         "build": "tsc",
         "dev": "tsc -w",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "prepublishOnly": "npm run build"
     },
     "keywords": [
@@ -41,6 +44,7 @@
         "ethers": "^6.16.0"
     },
     "devDependencies": {
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.18"
     }
 }
