Add integration test scripts for dev environment
Add standalone TypeScript scripts in scripts/ that exercise the SDK
end-to-end against the live dev API and Arbitrum chain:
- helpers.ts: shared setup (wallet, Rain instance, logger, waitForTx)
- test-read-markets.ts: tests getPublicMarkets and getMarketDetails
- test-build-txs.ts: tests buildApprovalTx, buildBuyOptionRawTx, buildLimitBuyOptionTx
- test-buy-flow.ts: full approve → buy option on-chain flow
- test-all.ts: sequential runner with summary

Also adds tsx dev dependency and npm run test:integration script.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "test": "vitest run",
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
+        "test:integration": "tsx scripts/test-all.ts",
         "prepublishOnly": "npm run build"
     },
     "keywords": [
@@ -44,6 +45,7 @@
         "ethers": "^6.16.0"
     },
     "devDependencies": {
+        "tsx": "^4.21.0",
         "typescript": "^5.9.3",
         "vitest": "^4.0.18"
     }
